; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/find/extr_function.c_c_perm.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/find/extr_function.c_c_perm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32 }

@FTS_NOSTAT = common dso_local global i32 0, align 4
@ftsoptions = common dso_local global i32 0, align 4
@F_ATLEAST = common dso_local global i32 0, align 4
@F_ANY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"%s: %s: illegal mode string\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @c_perm(%struct.TYPE_9__* %0, i8*** %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i8***, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i8*** %1, i8**** %4, align 8
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %9 = load i8***, i8**** %4, align 8
  %10 = call i8* @nextarg(%struct.TYPE_9__* %8, i8*** %9)
  store i8* %10, i8** %5, align 8
  %11 = load i32, i32* @FTS_NOSTAT, align 4
  %12 = xor i32 %11, -1
  %13 = load i32, i32* @ftsoptions, align 4
  %14 = and i32 %13, %12
  store i32 %14, i32* @ftsoptions, align 4
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %16 = call %struct.TYPE_8__* @palloc(%struct.TYPE_9__* %15)
  store %struct.TYPE_8__* %16, %struct.TYPE_8__** %6, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 45
  br i1 %20, label %21, label %29

21:                                               ; preds = %2
  %22 = load i32, i32* @F_ATLEAST, align 4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = or i32 %25, %22
  store i32 %26, i32* %24, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %5, align 8
  br label %43

29:                                               ; preds = %2
  %30 = load i8*, i8** %5, align 8
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp eq i32 %32, 43
  br i1 %33, label %34, label %42

34:                                               ; preds = %29
  %35 = load i32, i32* @F_ANY, align 4
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 4
  %39 = or i32 %38, %35
  store i32 %39, i32* %37, align 4
  %40 = load i8*, i8** %5, align 8
  %41 = getelementptr inbounds i8, i8* %40, i32 1
  store i8* %41, i8** %5, align 8
  br label %42

42:                                               ; preds = %34, %29
  br label %43

43:                                               ; preds = %42, %21
  %44 = load i8*, i8** %5, align 8
  %45 = call i32* @setmode(i8* %44)
  store i32* %45, i32** %7, align 8
  %46 = icmp eq i32* %45, null
  br i1 %46, label %47, label %53

47:                                               ; preds = %43
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i8*, i8** %5, align 8
  %52 = call i32 @errx(i32 1, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %50, i8* %51)
  br label %53

53:                                               ; preds = %47, %43
  %54 = load i32*, i32** %7, align 8
  %55 = call i32 @getmode(i32* %54, i32 0)
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %57 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %56, i32 0, i32 0
  store i32 %55, i32* %57, align 4
  %58 = load i32*, i32** %7, align 8
  %59 = call i32 @free(i32* %58)
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  ret %struct.TYPE_8__* %60
}

declare dso_local i8* @nextarg(%struct.TYPE_9__*, i8***) #1

declare dso_local %struct.TYPE_8__* @palloc(%struct.TYPE_9__*) #1

declare dso_local i32* @setmode(i8*) #1

declare dso_local i32 @errx(i32, i8*, i32, i8*) #1

declare dso_local i32 @getmode(i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
